<resources>
    <string name="app_name">TccMobile</string>

    <string name="txtLoginTitulo">Login</string>
    <string name="button_perfil_desc">Entre em seu perfil</string>
    <string name="txtSubTituloFaleConosco">Envie para nós o seu problema e entraremos em contato com você.</string>
    <string name="txtFaleConosco">Fale Conosco</string>
    <string name="button_home_desc">Volte a tela inicial</string>
    <string name="txtEmail">Insira o E-mail</string>
    <string name="txtSenha">Insira a senha</string>
    <string name="linkCadastro">Não tem conta?\nClique aqui e faça o cadastro!</string>
    <string name="txtButtonEntrar">Entrar</string>
    <string name="txtEsqueceuSenha"><u>Esqueceu a senha?\nClique aqui!</u></string>
    <string name="txtNovoComentario">+ NOVO COMENTARIO</string>
    <string name="txtSubTitulo">Entre na discussão!</string>
    <string name="txtBottomName">Insira seu nome</string>
    <string name="txtInputComent">Deixe seu comentario aqui.</string>
    <string name="txtInputDesc">Descreva o motivo para o contato aqui.</string>
    <string name="txtEnviar">Enviar</string>
    <string name="txtConfirmarCadastro">Confirmar cadastro</string>
    <string name="txtTenhoCadastro"><u>Tenho Cadastro!</u></string>
    <string name="title_cadastro">Novo Aqui?</string>
    <string name="title_cadastro_2">Crie sua conta!</string>
    <string name="title_cadastro_3">Faça login ou cadastre-se para reagir</string>
    <string name="title_cadastro_4">e dar sua opinião nas nossas notícias.</string>
    <string name="txt_redfSenha">Redefinir Senha</string>
    <string name="txt_subtitRedf">É bom tê-lo conosco!</string>
    <string name="txtNovaSenha">Nova Senha</string>
    <string name="txtRedf">Redefinir</string>
    <string name="txttenhoCads"><u>Tenho cadastro</u></string>
    <dimen name="text_size_small">14sp</dimen>
    <dimen name="text_size_medium">20sp</dimen>
    <string name="txt_noticias">Notícias da Semana</string>
    <string name="titnoticia"><u>Twitter: STF mantém suspensão do X no Brasil; Musk cita Lula; debate em SP | UOL News ao vivo</u></string>
    <string name="textonoticia">As mensagens vazadas do gabinete do ministro Alexandre de Moraes são como aquilo que o gato enterra: quanto mais se mexe, mais fede.
        Desculpe o ditado, mas essa sabedoria popular se mostrou verdadeira novamente na última quarta-feira (04), com mais uma reportagem da Vaza Toga publicada pela Folha de S. Paulo,
        revelando como Moraes tentou influenciar até nas políticas internas do Twitter, em benefício próprio.
        Quando não conseguiu, decidiu "endurecer" as medidas judiciais contra a plataforma.
        A nova leva de mensagens, em resumo, mostra conversas em um grupo de WhatsApp entre os juízes auxiliares de Moraes no Supremo Tribunal Federal (STF) e no Tribunal Superior Eleitoral (TSE),
        além de outros assessores, em março de 2023, cinco meses após o fim das eleições presidenciais de 2022.
        Marco Antônio Vargas, juiz auxiliar de Moraes no TSE, trouxe ao grupo a postagem de uma mulher criticando o ministro,
        provavelmente a pedido de Moraes, como já ocorrido em outros casos.
        "A mensagem dizia: ‘Foi o Tribunal Internacional.
        O Mula, Xandão e esse governo usurpador estão sendo acusados de crimes contra a humanidade (prisões ilegais, tortura, campos de concentração, mortes, etc.)’".
        A pergunta que surge é: “Por que um ministro do Supremo se preocuparia com uma postagem dessas?”
        Ego, vaidade, crueldade e necessidade de controle podem ser hipóteses, mas o fato é que Moraes não gostou,
        e sua equipe quis derrubar o conteúdo.
Uma     pessoa comum, ao se sentir ofendida por um post, contrataria um advogado e acionaria a justiça
        de primeira instância para pedir responsabilização civil e criminal do ofensor. Moraes, no entanto,
        queria que o Twitter não apenas removesse aquela publicação, mas todas as semelhantes.
        E, pior ainda, queria que a censura fosse apresentada como uma ação a partir das próprias regras do Twitter,
        não como um pedido extraoficial do TSE.


    </string>
    <string-array name="tipos_mensagem">
        <item>DÚVIDA</item>
        <item>SUGESTÃO</item>
        <item>RECLAMAÇÃO</item>
        <item>MENSAGEM</item>
    </string-array>

</resources>