<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/corfundo"
    tools:context=".FormCadastro">


    <TextView
        android:id="@+id/title_novoaqui"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_cadastro"
        android:textColor="@color/azulescuro"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="97dp" />

    <TextView
        android:id="@+id/title_cadastrese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_cadastro_2"
        android:textColor="@color/azulescuro"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="137dp" />

    <TextView
        android:id="@+id/title_menssage_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_cadastro_3"
        android:textColor="@color/azulclaro"
        android:textSize="20sp"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="193dp" />


    <TextView
        android:id="@+id/title_menssage_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_cadastro_4"
        android:textColor="@color/azulclaro"
        android:textSize="20sp"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="213dp" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/cabecalho_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/botaohome"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/home"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitCenter"
        android:layout_marginStart="10dp"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/button_home_desc"
        android:padding="10dp"
        />

    <ImageView
        android:id="@+id/logotit"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="-37dp"
        android:src="@drawable/logotitulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editButtonNome"
        android:layout_width="341dp"
        android:layout_height="62dp"
        android:layout_marginTop="276dp"
        android:background="@drawable/background_input_email"
        android:hint="@string/txtBottomName"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editEmail"
        android:layout_width="341dp"
        android:layout_height="60dp"
        android:layout_marginTop="364dp"
        android:background="@drawable/background_input_email"
        android:hint="@string/txtEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editSenha"
        android:layout_width="336dp"
        android:layout_height="57dp"
        android:layout_marginTop="448dp"
        android:background="@drawable/background_input_email"
        android:hint="@string/txtSenha"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/inputButtonEnviar"
        android:layout_width="341dp"
        android:layout_height="57dp"


        android:layout_marginTop="548dp"
        android:background="@drawable/background_button_selector"
        android:text="@string/txtConfirmarCadastro"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_menssage_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTenhoCadastro"
        android:textColor="@color/azulclaro"
        android:textSize="20sp"
        app:layout_constraintBaseline_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="642dp" />


</androidx.constraintlayout.widget.ConstraintLayout>