<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FaleConosco"
    android:background="@color/corfundo">



    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/cabecalho_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />



    <ImageView
        android:id="@+id/logotit"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logotitulo"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/botaohome"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/home"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="fitCenter"
        android:layout_marginStart="10dp"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/button_home_desc"
        android:padding="10dp"
        />

    <TextView
        android:id="@+id/txtnovoComentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtFaleConosco"
        android:textSize="39sp"
        android:textStyle="bold"
        android:textColor="@color/azulescuro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logotit"
        android:layout_marginTop="-25dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/txtSubTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtSubTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtnovoComentario"
        android:gravity="center"
        android:textColor="@color/azulescuro"
        android:textSize="17sp"
        android:layout_marginTop="8dp"
        android:textStyle="italic"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtSubTitulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="45dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:boxStrokeColor="@color/azulescuro"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black"
        app:errorTextColor="@color/red"
        app:errorEnabled="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editButtonNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtBottomName"
        android:inputType="textEmailAddress"
        android:textSize="18dp"
        android:background="@drawable/background_input_email"
        android:maxLines="1"
        android:padding="15dp"
        android:paddingStart="20dp"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtInputNome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:boxStrokeColor="@color/azulescuro"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black"
        app:errorEnabled="false"
        app:errorTextColor="@color/red"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtEmail"
        android:background="@drawable/background_input_email"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:padding="15dp"
        android:paddingStart="20dp"
        android:maxLines="1"
        />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/InputDescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtInputEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:boxStrokeColor="@color/azulescuro"
        app:hintAnimationEnabled="false"
        app:hintTextColor="@color/black"
        app:errorEnabled="false"
        app:errorTextColor="@color/red"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/background_input_desc"
            android:hint="@string/txtInputDesc"
            android:maxLines="100"
            android:gravity="start"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/inputButtonEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtEnviar"
        android:textColor="@color/white"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/InputDescricao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/background_button_selector"

        />
</androidx.constraintlayout.widget.ConstraintLayout>