<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormLogin"
    android:background="@color/corfundo">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/cabecalho_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/logotit"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="-37dp"
        android:src="@drawable/logotitulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/botaohome"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/home"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="fitCenter"
            android:layout_marginStart="10dp"
            android:layout_marginTop="7dp"
            android:contentDescription="@string/button_home_desc"
            android:padding="10dp"
            />

            <TextView
                android:id="@+id/logintxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txtLoginTitulo"
                android:textSize="40sp"
                android:textStyle="bold"
                android:textColor="@color/azulescuro"
                android:layout_marginStart="50dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/logotit"
                android:layout_marginTop="30dp"
                />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputLayoutEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/logintxt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="60dp"
                    android:layout_marginStart="80dp"
                    android:layout_marginEnd="80dp"
                    app:boxStrokeColor="@color/azulescuro"
                    app:hintAnimationEnabled="true"
                    app:hintTextColor="@color/black"
                    app:errorTextColor="@color/red"
                    app:errorEnabled="false"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/txtEmail"
                        android:inputType="textEmailAddress"
                        android:textSize="18dp"
                        android:background="@drawable/background_input_email"
                        android:maxLines="1"
                        android:padding="15dp"
                        android:paddingStart="25dp"
                        />

                   </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="76dp"
        android:src="@drawable/perfilazul"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logintxt" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/txtInputLayoutEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        app:boxStrokeColor="@color/azulescuro"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black"
        app:errorTextColor="@color/red"
        app:errorEnabled="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txtSenha"
            android:inputType="textPassword"
            android:textSize="18dp"
            android:background="@drawable/background_input_email"
            android:maxLines="1"
            android:padding="15dp"
            android:paddingStart="25dp"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="44dp"
        android:src="@drawable/chave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtInputLayoutEmail" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/linkCadastro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logintxt"
        android:layout_marginStart="50dp"
        android:textSize="19sp"
        android:textStyle="italic"
        android:textColor="@color/azulescurov2"
        android:clickable="true"
        android:focusable="true"
        />

     <androidx.appcompat.widget.AppCompatButton
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/butEntrar"
         android:text="@string/txtButtonEntrar"
         android:textColor="@color/white"
         android:padding="16dp"
         android:background="@drawable/background_button_selector"
         android:layout_marginStart="100dp"
         android:layout_marginEnd="100dp"
         android:layout_marginTop="40dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/txtInputLayoutSenha"
         />

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:text="@string/txtEsqueceuSenha"
             app:layout_constraintTop_toBottomOf="@id/butEntrar"
             android:textSize="19sp"
             android:textColor="@color/azulescuro"
             android:gravity="center"
             android:layout_marginTop="20dp"
             android:clickable="true"
             android:focusable="true"
             />
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>